// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LanguageToggle /> { locale: "en" } renders 1`] = `
<div>
  <div
    class="container"
    dir="ltr"
  >
    <strong>
      Read in:
    </strong>
    <ul>
      <li>
        <a
          class="primary"
          href="/"
        >
          Français
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<LanguageToggle /> { locale: "fr" } renders 1`] = `
<div>
  <div
    class="container"
    dir="ltr"
  >
    <strong>
      Read in:
    </strong>
    <ul>
      <li>
        <a
          class="primary"
          href="/"
        >
          English
        </a>
      </li>
    </ul>
  </div>
</div>
`;
